- Improved PHP extension loading mechanism with support for module dependencies
  and conflicts. (Jani, Dmitry) 
- Allowed return by reference from internal functions. (Marcus, Andi, Dmitry)
- Rewrote strtotime() with support for timezones and tons of new formats.
  (Derick)
- Added bindto socket context option. (Ilia)
- Added offset parameter to the stream_copy_to_stream() function. (Ilia)
- Fixed PDO shutdown problem (possible inifite loop running rollback on
  shutdown). (Wez)
- Fixed PECL bug #3714 (beginTransaction doesn't work if you're in
  auto-commit mode). (Wez)
- Fixed bug #33382 (array_reverse() fails after *sort()), 
  introduced by zend_hash_sort() optimizations in HEAD. (Tony)
- Fixed bug #33340 (CLI Crash when calling php:function from XSLT). (Rob)
- Fixed bug #33318 (throw 1; results in Invalid opcode 108/1/8). (Dmitry)
- Fixed bug #33312 (ReflectionParameter methods do not work correctly).
  (Dmitry)
- Fixed bug #33286 (nested array_walk() calls and user array compare functions
  broken; FCI cache). (Andrei, patch from m.bretz@metropolis-ag.de)
- Fixed bug #33277 (private method accessed by child class). (Dmitry)
- Fixed bug #33212 ([GCC 4]: 'zend_error_noreturn' aliased to external symbol
  'zend_error'). (Dmitry)
- Fixed bug #31256 (PHP_EVAL_LIBLINE configure macro does not handle -pthread).
  (Jani)
- Fixed bug #28355 (glob wont error if dir is not readable). (Hartmut)

10 Jun 2005, PHP 5.1 Beta 1
- Upgraded PCRE library to version 5.0. (Andrei)
- Removed php_check_syntax() function which never worked properly. (Ilia)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/ingres_ii   (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)