@@ -13,6 +13,9 @@ substr_count() function
 	
 	$a = str_repeat("abcacbabca", 100);
 	var_dump(@substr_count($a, "bca"));
+
+	var_dump(substr_count($a, "bca", 200));
+	var_dump(substr_count($a, "bca", 200, 50));
 ?>
 --EXPECT--
 bool(false)
@@ -22,3 +25,5 @@ int(0)
 int(0)
 int(100)
 int(200)
+int(160)
+int(10)
